// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ADP writer generate S/4HANA cloud config 1`] = `
Object {
  "package.json": Object {
    "contents": "{
    \\"name\\": \\"my-test-app\\",
    \\"version\\": \\"0.1.0\\",
    \\"private\\": true,
    \\"description\\": \\"Adaptation of the.original.app\\",
    \\"keywords\\": [
        \\"ui5\\",
        \\"sapui5\\",
        \\"adaptation-project\\"
    ],
    \\"dependencies\\": {},
    \\"devDependencies\\": {
        \\"@sap/ux-ui5-tooling\\": \\"1\\",
        \\"@ui5/task-adaptation\\": \\"^1.3.0\\",
        \\"@ui5/cli\\": \\"^4.0.16\\"
    },
    \\"scripts\\": {
        \\"build\\": \\"ui5 build --clean-dest\\",
        \\"start\\": \\"fiori run --open /test/flp.html#app-preview\\",
        \\"start-editor\\": \\"fiori run --open /test/adaptation-editor.html\\",
        \\"deploy\\": \\"npm run build && fiori deploy --config ui5-deploy.yaml\\",
        \\"undeploy\\": \\"npm run build && fiori undeploy --config ui5-deploy.yaml\\",
        \\"deploy-test\\": \\"npm run build && fiori deploy --config ui5-deploy.yaml --testMode true\\"
    }
}
",
    "state": "modified",
  },
  "ui5-deploy.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
builder:
  resources:
    excludes:
      - /test/**
      - /localService/**
  customTasks:
    - name: deploy-to-abap
      afterTask: generateCachebusterInfo
      configuration:
        target:
          url: http://sap.example
        app:
          package: $TMP
",
    "state": "modified",
  },
  "ui5.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
resources:
  configuration:
    propertiesFileSourceEncoding: UTF-8
customConfiguration:
  adp:
    support:
      id: '@package/name'
      toolsId: uuidv4
      version: 0.0.1
server:
  customMiddleware:
    - name: fiori-tools-appreload
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
    - name: fiori-tools-preview
      afterMiddleware: fiori-tools-appreload
      configuration:
        adp:
          target:
            url: http://sap.example
          ignoreCertErrors: false
    - name: fiori-tools-proxy
      afterMiddleware: fiori-tools-preview
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        backend:
          - url: http://sap.example
            path: /sap
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
          version: 1.133.0
builder:
  customTasks:
    - name: app-variant-bundler-build
      beforeTask: escapeNonAsciiCharacters
      configuration:
        type: abap
        appName: bsp.test.app
        languages:
          - sap: testId
            i18n: testKey
        target:
          url: http://sap.example
          ignoreCertErrors: false
",
    "state": "modified",
  },
}
`;

exports[`ADP writer generate S/4HANA cloud config with inboundId 1`] = `
Object {
  "package.json": Object {
    "contents": "{
    \\"name\\": \\"my-test-app\\",
    \\"version\\": \\"0.1.0\\",
    \\"private\\": true,
    \\"description\\": \\"Adaptation of the.original.app\\",
    \\"keywords\\": [
        \\"ui5\\",
        \\"sapui5\\",
        \\"adaptation-project\\"
    ],
    \\"dependencies\\": {},
    \\"devDependencies\\": {
        \\"@sap/ux-ui5-tooling\\": \\"1\\",
        \\"@ui5/task-adaptation\\": \\"^1.3.0\\",
        \\"@ui5/cli\\": \\"^4.0.16\\"
    },
    \\"scripts\\": {
        \\"build\\": \\"ui5 build --clean-dest\\",
        \\"start\\": \\"fiori run --open /test/flp.html#app-preview\\",
        \\"start-editor\\": \\"fiori run --open /test/adaptation-editor.html\\",
        \\"deploy\\": \\"npm run build && fiori deploy --config ui5-deploy.yaml\\",
        \\"undeploy\\": \\"npm run build && fiori undeploy --config ui5-deploy.yaml\\",
        \\"deploy-test\\": \\"npm run build && fiori deploy --config ui5-deploy.yaml --testMode true\\"
    }
}
",
    "state": "modified",
  },
  "ui5-deploy.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
builder:
  resources:
    excludes:
      - /test/**
      - /localService/**
  customTasks:
    - name: deploy-to-abap
      afterTask: generateCachebusterInfo
      configuration:
        target:
          url: http://sap.example
        app:
          package: $TMP
",
    "state": "modified",
  },
  "ui5.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
resources:
  configuration:
    propertiesFileSourceEncoding: UTF-8
customConfiguration:
  adp:
    support:
      id: '@package/name'
      toolsId: uuidv4
      version: 0.0.1
server:
  customMiddleware:
    - name: fiori-tools-appreload
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
    - name: fiori-tools-preview
      afterMiddleware: fiori-tools-appreload
      configuration:
        adp:
          target:
            url: http://sap.example
          ignoreCertErrors: false
    - name: fiori-tools-proxy
      afterMiddleware: fiori-tools-preview
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        backend:
          - url: http://sap.example
            path: /sap
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
          version: 1.133.0
builder:
  customTasks:
    - name: app-variant-bundler-build
      beforeTask: escapeNonAsciiCharacters
      configuration:
        type: abap
        appName: bsp.test.app
        languages:
          - sap: testId
            i18n: testKey
        target:
          url: http://sap.example
          ignoreCertErrors: false
",
    "state": "modified",
  },
}
`;

exports[`ADP writer generate S/4HANA cloud config with target destination 1`] = `
Object {
  "package.json": Object {
    "contents": "{
    \\"name\\": \\"my-test-app\\",
    \\"version\\": \\"0.1.0\\",
    \\"private\\": true,
    \\"description\\": \\"Adaptation of the.original.app\\",
    \\"keywords\\": [
        \\"ui5\\",
        \\"sapui5\\",
        \\"adaptation-project\\"
    ],
    \\"dependencies\\": {},
    \\"devDependencies\\": {
        \\"@sap/ux-ui5-tooling\\": \\"1\\",
        \\"@ui5/task-adaptation\\": \\"^1.3.0\\",
        \\"@ui5/cli\\": \\"^4.0.16\\"
    },
    \\"scripts\\": {
        \\"build\\": \\"ui5 build --clean-dest\\",
        \\"start\\": \\"fiori run --open /test/flp.html#app-preview\\",
        \\"start-editor\\": \\"fiori run --open /test/adaptation-editor.html\\",
        \\"deploy\\": \\"npm run build && fiori deploy --config ui5-deploy.yaml\\",
        \\"undeploy\\": \\"npm run build && fiori undeploy --config ui5-deploy.yaml\\",
        \\"deploy-test\\": \\"npm run build && fiori deploy --config ui5-deploy.yaml --testMode true\\"
    }
}
",
    "state": "modified",
  },
  "ui5-deploy.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
builder:
  resources:
    excludes:
      - /test/**
      - /localService/**
  customTasks:
    - name: deploy-to-abap
      afterTask: generateCachebusterInfo
      configuration:
        target:
          destination: DUMMY_DESTINATION
        app:
          package: $TMP
",
    "state": "modified",
  },
  "ui5.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
resources:
  configuration:
    propertiesFileSourceEncoding: UTF-8
customConfiguration:
  adp:
    support:
      id: '@package/name'
      toolsId: uuidv4
      version: 0.0.1
server:
  customMiddleware:
    - name: fiori-tools-appreload
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
    - name: fiori-tools-preview
      afterMiddleware: fiori-tools-appreload
      configuration:
        adp:
          target:
            destination: DUMMY_DESTINATION
          ignoreCertErrors: false
    - name: fiori-tools-proxy
      afterMiddleware: fiori-tools-preview
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        backend:
          - destination: DUMMY_DESTINATION
            url: https://REQUIRED_FOR_VSCODE.example
            path: /sap
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
          version: 1.122.1
builder:
  customTasks:
    - name: app-variant-bundler-build
      beforeTask: escapeNonAsciiCharacters
      configuration:
        type: abap
        appName: bsp.test.app
        languages:
          - sap: testId
            i18n: testKey
        target:
          destination: DUMMY_DESTINATION
          url: https://REQUIRED_FOR_VSCODE.example
",
    "state": "modified",
  },
}
`;

exports[`ADP writer generate add deploy config 1`] = `
Object {
  "package.json": Object {
    "contents": "{
    \\"name\\": \\"my-test-app\\",
    \\"version\\": \\"0.1.0\\",
    \\"private\\": true,
    \\"description\\": \\"Adaptation of the.original.app\\",
    \\"keywords\\": [
        \\"ui5\\",
        \\"sapui5\\",
        \\"adaptation-project\\"
    ],
    \\"dependencies\\": {},
    \\"devDependencies\\": {
        \\"@sap-ux/backend-proxy-middleware\\": \\"^0.7.5\\",
        \\"@sap-ux/preview-middleware\\": \\"^0.11.1\\",
        \\"@sap-ux/ui5-proxy-middleware\\": \\"^1.3.0\\",
        \\"@sap-ux/deploy-tooling\\": \\"^0.11.7\\",
        \\"@ui5/task-adaptation\\": \\"^1.3.0\\",
        \\"@ui5/cli\\": \\"^4.0.16\\"
    },
    \\"scripts\\": {
        \\"build\\": \\"ui5 build --exclude-task generateFlexChangesBundle generateComponentPreload minify --clean-dest\\",
        \\"start\\": \\"ui5 serve --open /test/flp.html#app-preview\\",
        \\"start-editor\\": \\"ui5 serve --open /test/adaptation-editor.html\\",
        \\"deploy\\": \\"npm run build && deploy --config ui5-deploy.yaml\\",
        \\"undeploy\\": \\"npm run build && undeploy --config ui5-deploy.yaml\\",
        \\"deploy-test\\": \\"npm run build && fiori deploy --config ui5-deploy.yaml --testMode true\\"
    }
}
",
    "state": "modified",
  },
  "ui5-deploy.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
builder:
  resources:
    excludes:
      - /test/**
      - /localService/**
  customTasks:
    - name: abap-deploy-task
      afterTask: generateCachebusterInfo
      configuration:
        target:
          url: http://sap.example
        app:
          package: $TMP
",
    "state": "modified",
  },
}
`;

exports[`ADP writer generate config without passed memfs editor instance 1`] = `
Object {
  "../minimal/.gitignore": Object {
    "contents": "node_modules/
dist/
.tmp
.env
*.zip",
    "state": "modified",
  },
  "../minimal/package.json": Object {
    "contents": "{
    \\"name\\": \\"my-test-app\\",
    \\"version\\": \\"0.1.0\\",
    \\"private\\": true,
    \\"description\\": \\"Adaptation of the.original.app\\",
    \\"keywords\\": [
        \\"ui5\\",
        \\"sapui5\\",
        \\"adaptation-project\\"
    ],
    \\"dependencies\\": {},
    \\"devDependencies\\": {
        \\"@sap-ux/backend-proxy-middleware\\": \\"^0.7.5\\",
        \\"@sap-ux/preview-middleware\\": \\"^0.11.1\\",
        \\"@sap-ux/ui5-proxy-middleware\\": \\"^1.3.0\\",
        \\"@sap-ux/deploy-tooling\\": \\"^0.11.7\\",
        \\"@ui5/task-adaptation\\": \\"^1.3.0\\",
        \\"@ui5/cli\\": \\"^4.0.16\\"
    },
    \\"scripts\\": {
        \\"build\\": \\"ui5 build --exclude-task generateFlexChangesBundle generateComponentPreload minify --clean-dest\\",
        \\"start\\": \\"ui5 serve --open /test/flp.html#app-preview\\",
        \\"start-editor\\": \\"ui5 serve --open /test/adaptation-editor.html\\"
    }
}
",
    "state": "modified",
  },
  "../minimal/ui5.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
resources:
  configuration:
    propertiesFileSourceEncoding: UTF-8
server:
  customMiddleware:
    - name: reload-middleware
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
    - name: preview-middleware
      afterMiddleware: compression
      configuration:
        adp:
          target:
            url: http://sap.example
          ignoreCertErrors: false
        rta:
          editors:
            - path: /test/adaptation-editor.html
              developerMode: true
    - name: ui5-proxy-middleware
      afterMiddleware: preview-middleware
    - name: backend-proxy-middleware
      afterMiddleware: preview-middleware
      configuration:
        backend:
          url: http://sap.example
          path: /sap
        options:
          secure: true
",
    "state": "modified",
  },
  "../minimal/webapp/i18n/i18n.properties": Object {
    "contents": "#Make sure you provide a unique prefix to the newly added keys in this file, to avoid overriding of SAP Fiori application keys.

#XTIT: Application name
my.test.app_sap.app.title=Adaptation of the.original.app
",
    "state": "modified",
  },
  "../minimal/webapp/manifest.appdescr_variant": Object {
    "contents": "{
  \\"fileName\\": \\"manifest\\",
  \\"layer\\": \\"CUSTOMER_BASE\\",
  \\"fileType\\": \\"appdescr_variant\\",
  \\"reference\\": \\"the.original.app\\",
  \\"id\\": \\"my.test.app\\",
  \\"namespace\\": \\"apps/the.original.app/appVariants/my.test.app/\\",
  \\"version\\": \\"0.1.0\\",
  \\"content\\": [
    {
      \\"changeType\\": \\"appdescr_app_setTitle\\",
      \\"content\\": {},
      \\"texts\\": {
        \\"i18n\\": \\"i18n/i18n.properties\\"
      }
    }
  ]
}
",
    "state": "modified",
  },
}
`;

exports[`ADP writer generate enable Fiori tools 1`] = `
Object {
  "package.json": Object {
    "contents": "{
    \\"name\\": \\"my-test-app\\",
    \\"version\\": \\"0.1.0\\",
    \\"private\\": true,
    \\"description\\": \\"Adaptation of the.original.app\\",
    \\"keywords\\": [
        \\"ui5\\",
        \\"sapui5\\",
        \\"adaptation-project\\"
    ],
    \\"dependencies\\": {},
    \\"devDependencies\\": {
        \\"@sap/ux-ui5-tooling\\": \\"1\\",
        \\"@ui5/task-adaptation\\": \\"^1.3.0\\",
        \\"@ui5/cli\\": \\"^4.0.16\\"
    },
    \\"scripts\\": {
        \\"build\\": \\"ui5 build --exclude-task generateFlexChangesBundle generateComponentPreload minify --clean-dest\\",
        \\"start\\": \\"fiori run --open /test/flp.html#app-preview\\",
        \\"start-editor\\": \\"fiori run --open /test/adaptation-editor.html\\",
        \\"deploy\\": \\"npm run build && fiori deploy --config ui5-deploy.yaml\\",
        \\"undeploy\\": \\"npm run build && fiori undeploy --config ui5-deploy.yaml\\",
        \\"deploy-test\\": \\"npm run build && fiori deploy --config ui5-deploy.yaml --testMode true\\"
    }
}
",
    "state": "modified",
  },
  "ui5-deploy.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
builder:
  resources:
    excludes:
      - /test/**
      - /localService/**
  customTasks:
    - name: deploy-to-abap
      afterTask: generateCachebusterInfo
      configuration:
        target:
          url: http://sap.example
        app:
          package: $TMP
",
    "state": "modified",
  },
  "ui5.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
resources:
  configuration:
    propertiesFileSourceEncoding: UTF-8
server:
  customMiddleware:
    - name: fiori-tools-appreload
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
    - name: fiori-tools-preview
      afterMiddleware: fiori-tools-appreload
      configuration:
        adp:
          target:
            url: http://sap.example
          ignoreCertErrors: false
    - name: fiori-tools-proxy
      afterMiddleware: fiori-tools-preview
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        backend:
          - url: http://sap.example
            path: /sap
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
",
    "state": "modified",
  },
}
`;

exports[`ADP writer generate enable TypeScript support 1`] = `
Object {
  "package.json": Object {
    "contents": "{
    \\"name\\": \\"my-test-app\\",
    \\"version\\": \\"0.1.0\\",
    \\"private\\": true,
    \\"description\\": \\"Adaptation of the.original.app\\",
    \\"keywords\\": [
        \\"ui5\\",
        \\"sapui5\\",
        \\"adaptation-project\\"
    ],
    \\"dependencies\\": {},
    \\"devDependencies\\": {
        \\"@sap/ux-ui5-tooling\\": \\"1\\",
        \\"@ui5/task-adaptation\\": \\"^1.3.0\\",
        \\"@ui5/cli\\": \\"^4.0.16\\",
        \\"@sapui5/types\\": \\"~1.133.0\\",
        \\"typescript\\": \\"^5.7.3\\",
        \\"ui5-tooling-transpile\\": \\"^3.6.1\\"
    },
    \\"scripts\\": {
        \\"build\\": \\"ui5 build --exclude-task generateFlexChangesBundle generateComponentPreload minify --clean-dest\\",
        \\"start\\": \\"fiori run --open /test/flp.html#app-preview\\",
        \\"start-editor\\": \\"fiori run --open /test/adaptation-editor.html\\",
        \\"deploy\\": \\"npm run build && fiori deploy --config ui5-deploy.yaml\\",
        \\"undeploy\\": \\"npm run build && fiori undeploy --config ui5-deploy.yaml\\",
        \\"deploy-test\\": \\"npm run build && fiori deploy --config ui5-deploy.yaml --testMode true\\"
    }
}
",
    "state": "modified",
  },
  "tsconfig.json": Object {
    "contents": "{
  \\"compilerOptions\\": {
    \\"target\\": \\"es2022\\",
    \\"module\\": \\"es2022\\",
    \\"moduleResolution\\": \\"node\\",
    \\"skipLibCheck\\": true,
    \\"allowJs\\": true,
    \\"strict\\": true,
    \\"strictPropertyInitialization\\": false,
    \\"rootDir\\": \\"./\\",
    \\"outDir\\": \\"./dist\\",
    \\"baseUrl\\": \\"./\\",
    \\"typeRoots\\": [\\"./node_modules/@types\\", \\"./node_modules/@sapui5/types\\"],
    \\"paths\\": {
      \\"my/test/app/*\\": [\\"./webapp/*\\"]
    }
  },
  \\"include\\": [\\"./webapp/**/*\\"]
}",
    "state": "modified",
  },
  "ui5-deploy.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
builder:
  resources:
    excludes:
      - /test/**
      - /localService/**
  customTasks:
    - name: deploy-to-abap
      afterTask: generateCachebusterInfo
      configuration:
        target:
          url: http://sap.example
        app:
          package: $TMP
",
    "state": "modified",
  },
  "ui5.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
resources:
  configuration:
    propertiesFileSourceEncoding: UTF-8
server:
  customMiddleware:
    - name: ui5-tooling-transpile-middleware
      afterMiddleware: compression
      configuration:
        debug: true
        transformModulesToUI5:
          overridesToOverride: true
    - name: fiori-tools-appreload
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
    - name: fiori-tools-preview
      afterMiddleware: fiori-tools-appreload
      configuration:
        adp:
          target:
            url: http://sap.example
          ignoreCertErrors: false
    - name: fiori-tools-proxy
      afterMiddleware: fiori-tools-preview
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        backend:
          - url: http://sap.example
            path: /sap
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
          version: 1.133.0
builder:
  customTasks:
    - name: ui5-tooling-transpile-task
      afterTask: replaceVersion
      configuration:
        debug: true
        omitSourceMaps: true
        omitTSFromBuildResult: true
        transformModulesToUI5:
          overridesToOverride: true
",
    "state": "modified",
  },
}
`;

exports[`ADP writer generate minimal config 1`] = `
Object {
  ".gitignore": Object {
    "contents": "node_modules/
dist/
.tmp
.env
*.zip",
    "state": "modified",
  },
  "package.json": Object {
    "contents": "{
    \\"name\\": \\"my-test-app\\",
    \\"version\\": \\"0.1.0\\",
    \\"private\\": true,
    \\"description\\": \\"Adaptation of the.original.app\\",
    \\"keywords\\": [
        \\"ui5\\",
        \\"sapui5\\",
        \\"adaptation-project\\"
    ],
    \\"dependencies\\": {},
    \\"devDependencies\\": {
        \\"@sap-ux/backend-proxy-middleware\\": \\"^0.7.5\\",
        \\"@sap-ux/preview-middleware\\": \\"^0.11.1\\",
        \\"@sap-ux/ui5-proxy-middleware\\": \\"^1.3.0\\",
        \\"@sap-ux/deploy-tooling\\": \\"^0.11.7\\",
        \\"@ui5/task-adaptation\\": \\"^1.3.0\\",
        \\"@ui5/cli\\": \\"^4.0.16\\"
    },
    \\"scripts\\": {
        \\"build\\": \\"ui5 build --exclude-task generateFlexChangesBundle generateComponentPreload minify --clean-dest\\",
        \\"start\\": \\"ui5 serve --open /test/flp.html#app-preview\\",
        \\"start-editor\\": \\"ui5 serve --open /test/adaptation-editor.html\\"
    }
}
",
    "state": "modified",
  },
  "ui5.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
resources:
  configuration:
    propertiesFileSourceEncoding: UTF-8
server:
  customMiddleware:
    - name: reload-middleware
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
    - name: preview-middleware
      afterMiddleware: compression
      configuration:
        adp:
          target:
            url: http://sap.example
          ignoreCertErrors: false
        rta:
          editors:
            - path: /test/adaptation-editor.html
              developerMode: true
    - name: ui5-proxy-middleware
      afterMiddleware: preview-middleware
    - name: backend-proxy-middleware
      afterMiddleware: preview-middleware
      configuration:
        backend:
          url: http://sap.example
          path: /sap
        options:
          secure: true
",
    "state": "modified",
  },
  "webapp/i18n/i18n.properties": Object {
    "contents": "#Make sure you provide a unique prefix to the newly added keys in this file, to avoid overriding of SAP Fiori application keys.

#XTIT: Application name
my.test.app_sap.app.title=Adaptation of the.original.app
",
    "state": "modified",
  },
  "webapp/manifest.appdescr_variant": Object {
    "contents": "{
  \\"fileName\\": \\"manifest\\",
  \\"layer\\": \\"CUSTOMER_BASE\\",
  \\"fileType\\": \\"appdescr_variant\\",
  \\"reference\\": \\"the.original.app\\",
  \\"id\\": \\"my.test.app\\",
  \\"namespace\\": \\"apps/the.original.app/appVariants/my.test.app/\\",
  \\"version\\": \\"0.1.0\\",
  \\"content\\": [
    {
      \\"changeType\\": \\"appdescr_app_setTitle\\",
      \\"content\\": {},
      \\"texts\\": {
        \\"i18n\\": \\"i18n/i18n.properties\\"
      }
    }
  ]
}
",
    "state": "modified",
  },
}
`;

exports[`ADP writer generate minimal config with i18n description 1`] = `
Object {
  ".gitignore": Object {
    "contents": "node_modules/
dist/
.tmp
.env
*.zip",
    "state": "modified",
  },
  "package.json": Object {
    "contents": "{
    \\"name\\": \\"my-test-app\\",
    \\"version\\": \\"0.1.0\\",
    \\"private\\": true,
    \\"description\\": \\"Adaptation of the.original.app\\",
    \\"keywords\\": [
        \\"ui5\\",
        \\"sapui5\\",
        \\"adaptation-project\\"
    ],
    \\"dependencies\\": {},
    \\"devDependencies\\": {
        \\"@sap-ux/backend-proxy-middleware\\": \\"^0.7.5\\",
        \\"@sap-ux/preview-middleware\\": \\"^0.11.1\\",
        \\"@sap-ux/ui5-proxy-middleware\\": \\"^1.3.0\\",
        \\"@sap-ux/deploy-tooling\\": \\"^0.11.7\\",
        \\"@ui5/task-adaptation\\": \\"^1.3.0\\",
        \\"@ui5/cli\\": \\"^4.0.16\\"
    },
    \\"scripts\\": {
        \\"build\\": \\"ui5 build --exclude-task generateFlexChangesBundle generateComponentPreload minify --clean-dest\\",
        \\"start\\": \\"ui5 serve --open /test/flp.html#app-preview\\",
        \\"start-editor\\": \\"ui5 serve --open /test/adaptation-editor.html\\"
    }
}
",
    "state": "modified",
  },
  "ui5.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
resources:
  configuration:
    propertiesFileSourceEncoding: UTF-8
server:
  customMiddleware:
    - name: reload-middleware
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
    - name: preview-middleware
      afterMiddleware: compression
      configuration:
        adp:
          target:
            url: http://sap.example
          ignoreCertErrors: false
        rta:
          editors:
            - path: /test/adaptation-editor.html
              developerMode: true
    - name: ui5-proxy-middleware
      afterMiddleware: preview-middleware
    - name: backend-proxy-middleware
      afterMiddleware: preview-middleware
      configuration:
        backend:
          url: http://sap.example
          path: /sap
        options:
          secure: true
",
    "state": "modified",
  },
  "webapp/i18n/i18n.properties": Object {
    "contents": "#Make sure you provide a unique prefix to the newly added keys in this file, to avoid overriding of SAP Fiori application keys.

#XTIT: Application name
my.test.app_sap.app.title=Adaptation of the.original.app
",
    "state": "modified",
  },
  "webapp/manifest.appdescr_variant": Object {
    "contents": "{
  \\"fileName\\": \\"manifest\\",
  \\"layer\\": \\"CUSTOMER_BASE\\",
  \\"fileType\\": \\"appdescr_variant\\",
  \\"reference\\": \\"the.original.app\\",
  \\"id\\": \\"my.test.app\\",
  \\"namespace\\": \\"apps/the.original.app/appVariants/my.test.app/\\",
  \\"version\\": \\"0.1.0\\",
  \\"content\\": [
    {
      \\"changeType\\": \\"appdescr_app_setTitle\\",
      \\"content\\": {},
      \\"texts\\": {
        \\"i18n\\": \\"i18n/i18n.properties\\"
      }
    }
  ]
}
",
    "state": "modified",
  },
}
`;

exports[`ADP writer migrate migrate minimal config 1`] = `
Object {
  "../deploy/.gitignore": Object {
    "contents": "node_modules/
dist/
.tmp
.env
*.zip",
    "state": "modified",
  },
  "../deploy/package.json": Object {
    "contents": "{
    \\"name\\": \\"my-test-app\\",
    \\"version\\": \\"0.1.0\\",
    \\"private\\": true,
    \\"description\\": \\"Adaptation of the.original.app\\",
    \\"keywords\\": [
        \\"ui5\\",
        \\"sapui5\\",
        \\"adaptation-project\\"
    ],
    \\"dependencies\\": {},
    \\"devDependencies\\": {
        \\"@sap-ux/backend-proxy-middleware\\": \\"^0.7.5\\",
        \\"@sap-ux/preview-middleware\\": \\"^0.11.1\\",
        \\"@sap-ux/ui5-proxy-middleware\\": \\"^1.3.0\\",
        \\"@sap-ux/deploy-tooling\\": \\"^0.11.7\\",
        \\"@ui5/task-adaptation\\": \\"^1.3.0\\",
        \\"@ui5/cli\\": \\"^4.0.16\\"
    },
    \\"scripts\\": {
        \\"build\\": \\"ui5 build --exclude-task generateFlexChangesBundle generateComponentPreload minify --clean-dest\\",
        \\"start\\": \\"ui5 serve --open /test/flp.html#app-preview\\",
        \\"start-editor\\": \\"ui5 serve --open /test/adaptation-editor.html\\",
        \\"deploy\\": \\"npm run build && deploy --config ui5-deploy.yaml\\",
        \\"undeploy\\": \\"npm run build && undeploy --config ui5-deploy.yaml\\",
        \\"deploy-test\\": \\"npm run build && fiori deploy --config ui5-deploy.yaml --testMode true\\"
    }
}
",
    "state": "modified",
  },
  "../deploy/ui5-deploy.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
builder:
  resources:
    excludes:
      - /test/**
      - /localService/**
  customTasks:
    - name: abap-deploy-task
      afterTask: generateCachebusterInfo
      configuration:
        target:
          url: http://sap.example
        app:
          package: $TMP
",
    "state": "modified",
  },
  "../deploy/ui5.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
resources:
  configuration:
    propertiesFileSourceEncoding: UTF-8
server:
  customMiddleware:
    - name: reload-middleware
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
    - name: preview-middleware
      afterMiddleware: compression
      configuration:
        adp:
          target:
            url: http://sap.example
          ignoreCertErrors: false
        rta:
          editors:
            - path: /test/adaptation-editor.html
              developerMode: true
    - name: ui5-proxy-middleware
      afterMiddleware: preview-middleware
    - name: backend-proxy-middleware
      afterMiddleware: preview-middleware
      configuration:
        backend:
          url: http://sap.example
          path: /sap
        options:
          secure: true
",
    "state": "modified",
  },
  "../deploy/webapp/i18n/i18n.properties": Object {
    "contents": "#Make sure you provide a unique prefix to the newly added keys in this file, to avoid overriding of SAP Fiori application keys.

#XTIT: Application name
my.test.app_sap.app.title=Adaptation of the.original.app
",
    "state": "modified",
  },
  "../deploy/webapp/manifest.appdescr_variant": Object {
    "contents": "{
  \\"fileName\\": \\"manifest\\",
  \\"layer\\": \\"CUSTOMER_BASE\\",
  \\"fileType\\": \\"appdescr_variant\\",
  \\"reference\\": \\"the.original.app\\",
  \\"id\\": \\"my.test.app\\",
  \\"namespace\\": \\"apps/the.original.app/appVariants/my.test.app/\\",
  \\"version\\": \\"0.1.0\\",
  \\"content\\": [
    {
      \\"changeType\\": \\"appdescr_app_setTitle\\",
      \\"content\\": {},
      \\"texts\\": {
        \\"i18n\\": \\"i18n/i18n.properties\\"
      }
    }
  ]
}
",
    "state": "modified",
  },
  "../fiori-tools/.gitignore": Object {
    "contents": "node_modules/
dist/
.tmp
.env
*.zip",
    "state": "modified",
  },
  "../fiori-tools/package.json": Object {
    "contents": "{
    \\"name\\": \\"my-test-app\\",
    \\"version\\": \\"0.1.0\\",
    \\"private\\": true,
    \\"description\\": \\"Adaptation of the.original.app\\",
    \\"keywords\\": [
        \\"ui5\\",
        \\"sapui5\\",
        \\"adaptation-project\\"
    ],
    \\"dependencies\\": {},
    \\"devDependencies\\": {
        \\"@sap/ux-ui5-tooling\\": \\"1\\",
        \\"@ui5/task-adaptation\\": \\"^1.3.0\\",
        \\"@ui5/cli\\": \\"^4.0.16\\"
    },
    \\"scripts\\": {
        \\"build\\": \\"ui5 build --exclude-task generateFlexChangesBundle generateComponentPreload minify --clean-dest\\",
        \\"start\\": \\"fiori run --open /test/flp.html#app-preview\\",
        \\"start-editor\\": \\"fiori run --open /test/adaptation-editor.html\\",
        \\"deploy\\": \\"npm run build && fiori deploy --config ui5-deploy.yaml\\",
        \\"undeploy\\": \\"npm run build && fiori undeploy --config ui5-deploy.yaml\\",
        \\"deploy-test\\": \\"npm run build && fiori deploy --config ui5-deploy.yaml --testMode true\\"
    }
}
",
    "state": "modified",
  },
  "../fiori-tools/ui5-deploy.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
builder:
  resources:
    excludes:
      - /test/**
      - /localService/**
  customTasks:
    - name: deploy-to-abap
      afterTask: generateCachebusterInfo
      configuration:
        target:
          url: http://sap.example
        app:
          package: $TMP
",
    "state": "modified",
  },
  "../fiori-tools/ui5.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
resources:
  configuration:
    propertiesFileSourceEncoding: UTF-8
server:
  customMiddleware:
    - name: fiori-tools-appreload
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
    - name: fiori-tools-preview
      afterMiddleware: fiori-tools-appreload
      configuration:
        adp:
          target:
            url: http://sap.example
          ignoreCertErrors: false
    - name: fiori-tools-proxy
      afterMiddleware: fiori-tools-preview
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        backend:
          - url: http://sap.example
            path: /sap
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
",
    "state": "modified",
  },
  "../fiori-tools/webapp/i18n/i18n.properties": Object {
    "contents": "#Make sure you provide a unique prefix to the newly added keys in this file, to avoid overriding of SAP Fiori application keys.

#XTIT: Application name
my.test.app_sap.app.title=Adaptation of the.original.app
",
    "state": "modified",
  },
  "../fiori-tools/webapp/manifest.appdescr_variant": Object {
    "contents": "{
  \\"fileName\\": \\"manifest\\",
  \\"layer\\": \\"CUSTOMER_BASE\\",
  \\"fileType\\": \\"appdescr_variant\\",
  \\"reference\\": \\"the.original.app\\",
  \\"id\\": \\"my.test.app\\",
  \\"namespace\\": \\"apps/the.original.app/appVariants/my.test.app/\\",
  \\"version\\": \\"0.1.0\\",
  \\"content\\": [
    {
      \\"changeType\\": \\"appdescr_app_setTitle\\",
      \\"content\\": {},
      \\"texts\\": {
        \\"i18n\\": \\"i18n/i18n.properties\\"
      }
    }
  ]
}
",
    "state": "modified",
  },
  "../minimal/.gitignore": Object {
    "contents": "node_modules/
dist/
.tmp
.env
*.zip",
    "state": "modified",
  },
  "../minimal/package.json": Object {
    "contents": "{
    \\"name\\": \\"my-test-app\\",
    \\"version\\": \\"0.1.0\\",
    \\"private\\": true,
    \\"description\\": \\"Adaptation of the.original.app\\",
    \\"keywords\\": [
        \\"ui5\\",
        \\"sapui5\\",
        \\"adaptation-project\\"
    ],
    \\"dependencies\\": {},
    \\"devDependencies\\": {
        \\"@sap-ux/backend-proxy-middleware\\": \\"^0.7.5\\",
        \\"@sap-ux/preview-middleware\\": \\"^0.11.1\\",
        \\"@sap-ux/ui5-proxy-middleware\\": \\"^1.3.0\\",
        \\"@sap-ux/deploy-tooling\\": \\"^0.11.7\\",
        \\"@ui5/task-adaptation\\": \\"^1.3.0\\",
        \\"@ui5/cli\\": \\"^4.0.16\\"
    },
    \\"scripts\\": {
        \\"build\\": \\"ui5 build --exclude-task generateFlexChangesBundle generateComponentPreload minify --clean-dest\\",
        \\"start\\": \\"ui5 serve --open /test/flp.html#app-preview\\",
        \\"start-editor\\": \\"ui5 serve --open /test/adaptation-editor.html\\"
    }
}
",
    "state": "modified",
  },
  "../minimal/ui5.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
resources:
  configuration:
    propertiesFileSourceEncoding: UTF-8
server:
  customMiddleware:
    - name: reload-middleware
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
    - name: preview-middleware
      afterMiddleware: compression
      configuration:
        adp:
          target:
            url: http://sap.example
          ignoreCertErrors: false
        rta:
          editors:
            - path: /test/adaptation-editor.html
              developerMode: true
    - name: ui5-proxy-middleware
      afterMiddleware: preview-middleware
    - name: backend-proxy-middleware
      afterMiddleware: preview-middleware
      configuration:
        backend:
          url: http://sap.example
          path: /sap
        options:
          secure: true
",
    "state": "modified",
  },
  "../minimal/webapp/i18n/i18n.properties": Object {
    "contents": "#Make sure you provide a unique prefix to the newly added keys in this file, to avoid overriding of SAP Fiori application keys.

#XTIT: Application name
my.test.app_sap.app.title=Adaptation of the.original.app
",
    "state": "modified",
  },
  "../minimal/webapp/manifest.appdescr_variant": Object {
    "contents": "{
  \\"fileName\\": \\"manifest\\",
  \\"layer\\": \\"CUSTOMER_BASE\\",
  \\"fileType\\": \\"appdescr_variant\\",
  \\"reference\\": \\"the.original.app\\",
  \\"id\\": \\"my.test.app\\",
  \\"namespace\\": \\"apps/the.original.app/appVariants/my.test.app/\\",
  \\"version\\": \\"0.1.0\\",
  \\"content\\": [
    {
      \\"changeType\\": \\"appdescr_app_setTitle\\",
      \\"content\\": {},
      \\"texts\\": {
        \\"i18n\\": \\"i18n/i18n.properties\\"
      }
    }
  ]
}
",
    "state": "modified",
  },
  "../s4hana/.gitignore": Object {
    "contents": "node_modules/
dist/
.tmp
.env
*.zip",
    "state": "modified",
  },
  "../s4hana/package.json": Object {
    "contents": "{
    \\"name\\": \\"my-test-app\\",
    \\"version\\": \\"0.1.0\\",
    \\"private\\": true,
    \\"description\\": \\"Adaptation of the.original.app\\",
    \\"keywords\\": [
        \\"ui5\\",
        \\"sapui5\\",
        \\"adaptation-project\\"
    ],
    \\"dependencies\\": {},
    \\"devDependencies\\": {
        \\"@sap/ux-ui5-tooling\\": \\"1\\",
        \\"@ui5/task-adaptation\\": \\"^1.3.0\\",
        \\"@ui5/cli\\": \\"^4.0.16\\"
    },
    \\"scripts\\": {
        \\"build\\": \\"ui5 build --clean-dest\\",
        \\"start\\": \\"fiori run --open /test/flp.html#app-preview\\",
        \\"start-editor\\": \\"fiori run --open /test/adaptation-editor.html\\",
        \\"deploy\\": \\"npm run build && fiori deploy --config ui5-deploy.yaml\\",
        \\"undeploy\\": \\"npm run build && fiori undeploy --config ui5-deploy.yaml\\",
        \\"deploy-test\\": \\"npm run build && fiori deploy --config ui5-deploy.yaml --testMode true\\"
    }
}
",
    "state": "modified",
  },
  "../s4hana/ui5-deploy.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
builder:
  resources:
    excludes:
      - /test/**
      - /localService/**
  customTasks:
    - name: deploy-to-abap
      afterTask: generateCachebusterInfo
      configuration:
        target:
          url: http://sap.example
        app:
          package: $TMP
",
    "state": "modified",
  },
  "../s4hana/ui5.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
resources:
  configuration:
    propertiesFileSourceEncoding: UTF-8
customConfiguration:
  adp:
    support:
      id: '@package/name'
      toolsId: uuidv4
      version: 0.0.1
server:
  customMiddleware:
    - name: fiori-tools-appreload
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
    - name: fiori-tools-preview
      afterMiddleware: fiori-tools-appreload
      configuration:
        adp:
          target:
            url: http://sap.example
          ignoreCertErrors: false
    - name: fiori-tools-proxy
      afterMiddleware: fiori-tools-preview
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        backend:
          - url: http://sap.example
            path: /sap
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
          version: 1.133.0
builder:
  customTasks:
    - name: app-variant-bundler-build
      beforeTask: escapeNonAsciiCharacters
      configuration:
        type: abap
        appName: bsp.test.app
        languages:
          - sap: testId
            i18n: testKey
        target:
          url: http://sap.example
          ignoreCertErrors: false
",
    "state": "modified",
  },
  "../s4hana/webapp/i18n/i18n.properties": Object {
    "contents": "#Make sure you provide a unique prefix to the newly added keys in this file, to avoid overriding of SAP Fiori application keys.

#XTIT: Application name
my.test.app_sap.app.title=Adaptation of the.original.app

# FLP Configuration

my.test.app_sap.app.crossNavigation.inbounds.my.test.app.InboundID.title=testTitle
my.test.app_sap.app.crossNavigation.inbounds.my.test.app.InboundID.subTitle=testSubTitle
",
    "state": "modified",
  },
  "../s4hana/webapp/manifest.appdescr_variant": Object {
    "contents": "{
  \\"fileName\\": \\"manifest\\",
  \\"layer\\": \\"CUSTOMER_BASE\\",
  \\"fileType\\": \\"appdescr_variant\\",
  \\"reference\\": \\"the.original.app\\",
  \\"id\\": \\"my.test.app\\",
  \\"namespace\\": \\"apps/the.original.app/appVariants/my.test.app/\\",
  \\"version\\": \\"0.1.0\\",
  \\"content\\": [
    {
      \\"changeType\\": \\"appdescr_app_setTitle\\",
      \\"content\\": {},
      \\"texts\\": {
        \\"i18n\\": \\"i18n/i18n.properties\\"
      }
    },
    {
      \\"changeType\\": \\"appdescr_app_addNewInbound\\",
      \\"content\\": {
        \\"inbound\\": {
          \\"my.test.app.InboundID\\": {
            \\"action\\": \\"sampleAction\\",
            \\"semanticObject\\": \\"sampleObj\\",
            \\"title\\": \\"{{my.test.app_sap.app.crossNavigation.inbounds.my.test.app.InboundID.title}}\\",
            \\"signature\\": {
              \\"additionalParameters\\": \\"allowed\\",
              \\"parameters\\": {}
            },
            \\"subTitle\\": \\"{{my.test.app_sap.app.crossNavigation.inbounds.my.test.app.InboundID.subTitle}}\\"
          }
        }
      },
      \\"texts\\": {
        \\"i18n\\": \\"i18n/i18n.properties\\"
      }
    },
    {
      \\"changeType\\": \\"appdescr_app_removeAllInboundsExceptOne\\",
      \\"content\\": {
        \\"inboundId\\": \\"my.test.app.InboundID\\"
      },
      \\"texts\\": {}
    }
  ]
}
",
    "state": "modified",
  },
  "../s4hanaDestination/.gitignore": Object {
    "contents": "node_modules/
dist/
.tmp
.env
*.zip",
    "state": "modified",
  },
  "../s4hanaDestination/package.json": Object {
    "contents": "{
    \\"name\\": \\"my-test-app\\",
    \\"version\\": \\"0.1.0\\",
    \\"private\\": true,
    \\"description\\": \\"Adaptation of the.original.app\\",
    \\"keywords\\": [
        \\"ui5\\",
        \\"sapui5\\",
        \\"adaptation-project\\"
    ],
    \\"dependencies\\": {},
    \\"devDependencies\\": {
        \\"@sap/ux-ui5-tooling\\": \\"1\\",
        \\"@ui5/task-adaptation\\": \\"^1.3.0\\",
        \\"@ui5/cli\\": \\"^4.0.16\\"
    },
    \\"scripts\\": {
        \\"build\\": \\"ui5 build --clean-dest\\",
        \\"start\\": \\"fiori run --open /test/flp.html#app-preview\\",
        \\"start-editor\\": \\"fiori run --open /test/adaptation-editor.html\\",
        \\"deploy\\": \\"npm run build && fiori deploy --config ui5-deploy.yaml\\",
        \\"undeploy\\": \\"npm run build && fiori undeploy --config ui5-deploy.yaml\\",
        \\"deploy-test\\": \\"npm run build && fiori deploy --config ui5-deploy.yaml --testMode true\\"
    }
}
",
    "state": "modified",
  },
  "../s4hanaDestination/ui5-deploy.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
builder:
  resources:
    excludes:
      - /test/**
      - /localService/**
  customTasks:
    - name: deploy-to-abap
      afterTask: generateCachebusterInfo
      configuration:
        target:
          destination: DUMMY_DESTINATION
        app:
          package: $TMP
",
    "state": "modified",
  },
  "../s4hanaDestination/ui5.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
resources:
  configuration:
    propertiesFileSourceEncoding: UTF-8
customConfiguration:
  adp:
    support:
      id: '@package/name'
      toolsId: uuidv4
      version: 0.0.1
server:
  customMiddleware:
    - name: fiori-tools-appreload
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
    - name: fiori-tools-preview
      afterMiddleware: fiori-tools-appreload
      configuration:
        adp:
          target:
            destination: DUMMY_DESTINATION
          ignoreCertErrors: false
    - name: fiori-tools-proxy
      afterMiddleware: fiori-tools-preview
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        backend:
          - destination: DUMMY_DESTINATION
            url: https://REQUIRED_FOR_VSCODE.example
            path: /sap
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
          version: 1.122.1
builder:
  customTasks:
    - name: app-variant-bundler-build
      beforeTask: escapeNonAsciiCharacters
      configuration:
        type: abap
        appName: bsp.test.app
        languages:
          - sap: testId
            i18n: testKey
        target:
          destination: DUMMY_DESTINATION
          url: https://REQUIRED_FOR_VSCODE.example
",
    "state": "modified",
  },
  "../s4hanaDestination/webapp/i18n/i18n.properties": Object {
    "contents": "#Make sure you provide a unique prefix to the newly added keys in this file, to avoid overriding of SAP Fiori application keys.

#XTIT: Application name
my.test.app_sap.app.title=Adaptation of the.original.app

# FLP Configuration

my.test.app_sap.app.crossNavigation.inbounds.my.test.app.InboundID.title=testTitle
my.test.app_sap.app.crossNavigation.inbounds.my.test.app.InboundID.subTitle=testSubTitle
",
    "state": "modified",
  },
  "../s4hanaDestination/webapp/manifest.appdescr_variant": Object {
    "contents": "{
  \\"fileName\\": \\"manifest\\",
  \\"layer\\": \\"CUSTOMER_BASE\\",
  \\"fileType\\": \\"appdescr_variant\\",
  \\"reference\\": \\"the.original.app\\",
  \\"id\\": \\"my.test.app\\",
  \\"namespace\\": \\"apps/the.original.app/appVariants/my.test.app/\\",
  \\"version\\": \\"0.1.0\\",
  \\"content\\": [
    {
      \\"changeType\\": \\"appdescr_app_setTitle\\",
      \\"content\\": {},
      \\"texts\\": {
        \\"i18n\\": \\"i18n/i18n.properties\\"
      }
    },
    {
      \\"changeType\\": \\"appdescr_app_addNewInbound\\",
      \\"content\\": {
        \\"inbound\\": {
          \\"my.test.app.InboundID\\": {
            \\"action\\": \\"sampleAction\\",
            \\"semanticObject\\": \\"sampleObj\\",
            \\"title\\": \\"{{my.test.app_sap.app.crossNavigation.inbounds.my.test.app.InboundID.title}}\\",
            \\"signature\\": {
              \\"additionalParameters\\": \\"allowed\\",
              \\"parameters\\": {}
            },
            \\"subTitle\\": \\"{{my.test.app_sap.app.crossNavigation.inbounds.my.test.app.InboundID.subTitle}}\\"
          }
        }
      },
      \\"texts\\": {
        \\"i18n\\": \\"i18n/i18n.properties\\"
      }
    },
    {
      \\"changeType\\": \\"appdescr_app_removeAllInboundsExceptOne\\",
      \\"content\\": {
        \\"inboundId\\": \\"my.test.app.InboundID\\"
      },
      \\"texts\\": {}
    }
  ]
}
",
    "state": "modified",
  },
  "../s4hanaWithInboundId/.gitignore": Object {
    "contents": "node_modules/
dist/
.tmp
.env
*.zip",
    "state": "modified",
  },
  "../s4hanaWithInboundId/package.json": Object {
    "contents": "{
    \\"name\\": \\"my-test-app\\",
    \\"version\\": \\"0.1.0\\",
    \\"private\\": true,
    \\"description\\": \\"Adaptation of the.original.app\\",
    \\"keywords\\": [
        \\"ui5\\",
        \\"sapui5\\",
        \\"adaptation-project\\"
    ],
    \\"dependencies\\": {},
    \\"devDependencies\\": {
        \\"@sap/ux-ui5-tooling\\": \\"1\\",
        \\"@ui5/task-adaptation\\": \\"^1.3.0\\",
        \\"@ui5/cli\\": \\"^4.0.16\\"
    },
    \\"scripts\\": {
        \\"build\\": \\"ui5 build --clean-dest\\",
        \\"start\\": \\"fiori run --open /test/flp.html#app-preview\\",
        \\"start-editor\\": \\"fiori run --open /test/adaptation-editor.html\\",
        \\"deploy\\": \\"npm run build && fiori deploy --config ui5-deploy.yaml\\",
        \\"undeploy\\": \\"npm run build && fiori undeploy --config ui5-deploy.yaml\\",
        \\"deploy-test\\": \\"npm run build && fiori deploy --config ui5-deploy.yaml --testMode true\\"
    }
}
",
    "state": "modified",
  },
  "../s4hanaWithInboundId/ui5-deploy.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
builder:
  resources:
    excludes:
      - /test/**
      - /localService/**
  customTasks:
    - name: deploy-to-abap
      afterTask: generateCachebusterInfo
      configuration:
        target:
          url: http://sap.example
        app:
          package: $TMP
",
    "state": "modified",
  },
  "../s4hanaWithInboundId/ui5.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
resources:
  configuration:
    propertiesFileSourceEncoding: UTF-8
customConfiguration:
  adp:
    support:
      id: '@package/name'
      toolsId: uuidv4
      version: 0.0.1
server:
  customMiddleware:
    - name: fiori-tools-appreload
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
    - name: fiori-tools-preview
      afterMiddleware: fiori-tools-appreload
      configuration:
        adp:
          target:
            url: http://sap.example
          ignoreCertErrors: false
    - name: fiori-tools-proxy
      afterMiddleware: fiori-tools-preview
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        backend:
          - url: http://sap.example
            path: /sap
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
          version: 1.133.0
builder:
  customTasks:
    - name: app-variant-bundler-build
      beforeTask: escapeNonAsciiCharacters
      configuration:
        type: abap
        appName: bsp.test.app
        languages:
          - sap: testId
            i18n: testKey
        target:
          url: http://sap.example
          ignoreCertErrors: false
",
    "state": "modified",
  },
  "../s4hanaWithInboundId/webapp/i18n/i18n.properties": Object {
    "contents": "#Make sure you provide a unique prefix to the newly added keys in this file, to avoid overriding of SAP Fiori application keys.

#XTIT: Application name
my.test.app_sap.app.title=Adaptation of the.original.app

# FLP Configuration

my.test.app_sap.app.crossNavigation.inbounds.sampleId.title=
my.test.app_sap.app.crossNavigation.inbounds.sampleId.subTitle=sampleSubTitle
",
    "state": "modified",
  },
  "../s4hanaWithInboundId/webapp/manifest.appdescr_variant": Object {
    "contents": "{
  \\"fileName\\": \\"manifest\\",
  \\"layer\\": \\"CUSTOMER_BASE\\",
  \\"fileType\\": \\"appdescr_variant\\",
  \\"reference\\": \\"the.original.app\\",
  \\"id\\": \\"my.test.app\\",
  \\"namespace\\": \\"apps/the.original.app/appVariants/my.test.app/\\",
  \\"version\\": \\"0.1.0\\",
  \\"content\\": [
    {
      \\"changeType\\": \\"appdescr_app_setTitle\\",
      \\"content\\": {},
      \\"texts\\": {
        \\"i18n\\": \\"i18n/i18n.properties\\"
      }
    },
    {
      \\"changeType\\": \\"appdescr_app_addNewInbound\\",
      \\"content\\": {
        \\"inbound\\": {
          \\"sampleId\\": {
            \\"title\\": \\"{{my.test.app_sap.app.crossNavigation.inbounds.sampleId.title}}\\",
            \\"signature\\": {
              \\"additionalParameters\\": \\"allowed\\",
              \\"parameters\\": {}
            },
            \\"subTitle\\": \\"{{my.test.app_sap.app.crossNavigation.inbounds.sampleId.subTitle}}\\"
          }
        }
      },
      \\"texts\\": {
        \\"i18n\\": \\"i18n/i18n.properties\\"
      }
    },
    {
      \\"changeType\\": \\"appdescr_app_removeAllInboundsExceptOne\\",
      \\"content\\": {
        \\"inboundId\\": \\"sampleId\\"
      },
      \\"texts\\": {}
    }
  ]
}
",
    "state": "modified",
  },
  "../ts-support/.gitignore": Object {
    "contents": "node_modules/
dist/
.tmp
.env
*.zip",
    "state": "modified",
  },
  "../ts-support/package.json": Object {
    "contents": "{
    \\"name\\": \\"my-test-app\\",
    \\"version\\": \\"0.1.0\\",
    \\"private\\": true,
    \\"description\\": \\"Adaptation of the.original.app\\",
    \\"keywords\\": [
        \\"ui5\\",
        \\"sapui5\\",
        \\"adaptation-project\\"
    ],
    \\"dependencies\\": {},
    \\"devDependencies\\": {
        \\"@sap/ux-ui5-tooling\\": \\"1\\",
        \\"@ui5/task-adaptation\\": \\"^1.3.0\\",
        \\"@ui5/cli\\": \\"^4.0.16\\",
        \\"@sapui5/types\\": \\"~1.133.0\\",
        \\"typescript\\": \\"^5.7.3\\",
        \\"ui5-tooling-transpile\\": \\"^3.6.1\\"
    },
    \\"scripts\\": {
        \\"build\\": \\"ui5 build --exclude-task generateFlexChangesBundle generateComponentPreload minify --clean-dest\\",
        \\"start\\": \\"fiori run --open /test/flp.html#app-preview\\",
        \\"start-editor\\": \\"fiori run --open /test/adaptation-editor.html\\",
        \\"deploy\\": \\"npm run build && fiori deploy --config ui5-deploy.yaml\\",
        \\"undeploy\\": \\"npm run build && fiori undeploy --config ui5-deploy.yaml\\",
        \\"deploy-test\\": \\"npm run build && fiori deploy --config ui5-deploy.yaml --testMode true\\"
    }
}
",
    "state": "modified",
  },
  "../ts-support/tsconfig.json": Object {
    "contents": "{
  \\"compilerOptions\\": {
    \\"target\\": \\"es2022\\",
    \\"module\\": \\"es2022\\",
    \\"moduleResolution\\": \\"node\\",
    \\"skipLibCheck\\": true,
    \\"allowJs\\": true,
    \\"strict\\": true,
    \\"strictPropertyInitialization\\": false,
    \\"rootDir\\": \\"./\\",
    \\"outDir\\": \\"./dist\\",
    \\"baseUrl\\": \\"./\\",
    \\"typeRoots\\": [\\"./node_modules/@types\\", \\"./node_modules/@sapui5/types\\"],
    \\"paths\\": {
      \\"my/test/app/*\\": [\\"./webapp/*\\"]
    }
  },
  \\"include\\": [\\"./webapp/**/*\\"]
}",
    "state": "modified",
  },
  "../ts-support/ui5-deploy.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
builder:
  resources:
    excludes:
      - /test/**
      - /localService/**
  customTasks:
    - name: deploy-to-abap
      afterTask: generateCachebusterInfo
      configuration:
        target:
          url: http://sap.example
        app:
          package: $TMP
",
    "state": "modified",
  },
  "../ts-support/ui5.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
resources:
  configuration:
    propertiesFileSourceEncoding: UTF-8
server:
  customMiddleware:
    - name: ui5-tooling-transpile-middleware
      afterMiddleware: compression
      configuration:
        debug: true
        transformModulesToUI5:
          overridesToOverride: true
    - name: fiori-tools-appreload
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
    - name: fiori-tools-preview
      afterMiddleware: fiori-tools-appreload
      configuration:
        adp:
          target:
            url: http://sap.example
          ignoreCertErrors: false
    - name: fiori-tools-proxy
      afterMiddleware: fiori-tools-preview
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        backend:
          - url: http://sap.example
            path: /sap
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
          version: 1.133.0
builder:
  customTasks:
    - name: ui5-tooling-transpile-task
      afterTask: replaceVersion
      configuration:
        debug: true
        omitSourceMaps: true
        omitTSFromBuildResult: true
        transformModulesToUI5:
          overridesToOverride: true
",
    "state": "modified",
  },
  "../ts-support/webapp/i18n/i18n.properties": Object {
    "contents": "#Make sure you provide a unique prefix to the newly added keys in this file, to avoid overriding of SAP Fiori application keys.

#XTIT: Application name
my.test.app_sap.app.title=Adaptation of the.original.app
",
    "state": "modified",
  },
  "../ts-support/webapp/manifest.appdescr_variant": Object {
    "contents": "{
  \\"fileName\\": \\"manifest\\",
  \\"layer\\": \\"CUSTOMER_BASE\\",
  \\"fileType\\": \\"appdescr_variant\\",
  \\"reference\\": \\"the.original.app\\",
  \\"id\\": \\"my.test.app\\",
  \\"namespace\\": \\"apps/the.original.app/appVariants/my.test.app/\\",
  \\"version\\": \\"0.1.0\\",
  \\"content\\": [
    {
      \\"changeType\\": \\"appdescr_app_setTitle\\",
      \\"content\\": {},
      \\"texts\\": {
        \\"i18n\\": \\"i18n/i18n.properties\\"
      }
    }
  ]
}
",
    "state": "modified",
  },
  ".che/project.json": Object {
    "contents": null,
    "state": "deleted",
  },
  ".gitignore": Object {
    "contents": "node_modules/
dist/
.tmp
.env
*.zip",
    "state": "modified",
  },
  "neo-app.json": Object {
    "contents": null,
    "state": "deleted",
  },
  "package.json": Object {
    "contents": "{
    \\"name\\": \\"my-test-app\\",
    \\"version\\": \\"0.1.0\\",
    \\"private\\": true,
    \\"description\\": \\"Adaptation of the.original.app\\",
    \\"keywords\\": [
        \\"ui5\\",
        \\"sapui5\\",
        \\"adaptation-project\\"
    ],
    \\"dependencies\\": {},
    \\"devDependencies\\": {
        \\"@sap/ux-ui5-tooling\\": \\"1\\",
        \\"@ui5/task-adaptation\\": \\"^1.3.0\\",
        \\"@ui5/cli\\": \\"^4.0.16\\"
    },
    \\"scripts\\": {
        \\"build\\": \\"ui5 build --exclude-task generateFlexChangesBundle generateComponentPreload minify --clean-dest\\",
        \\"start\\": \\"fiori run --open /test/flp.html#app-preview\\",
        \\"start-editor\\": \\"fiori run --open /test/adaptation-editor.html\\"
    }
}
",
    "state": "modified",
  },
  "ui5.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"3.1\\"
metadata:
  name: my-test-app
type: application
resources:
  configuration:
    propertiesFileSourceEncoding: UTF-8
customConfiguration:
  adp:
    support:
      id: '@package/name'
      toolsId: uuidv4
      version: 0.0.1
server:
  customMiddleware:
    - name: fiori-tools-appreload
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
    - name: fiori-tools-preview
      afterMiddleware: fiori-tools-appreload
      configuration:
        adp:
          target:
            destination: test
            url: http://sap.example
            client: '000'
          ignoreCertErrors: false
    - name: fiori-tools-proxy
      afterMiddleware: fiori-tools-preview
      configuration:
        ignoreCertErrors: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        backend:
          - destination: test
            url: http://sap.example
            client: '000'
            path: /sap
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
          version: 1.133.0
",
    "state": "modified",
  },
  "webapp/i18n/ListReport/SEPMRA_C_PD_Product/i18n.properties": Object {
    "contents": "#Make sure you provide a unique prefix to the newly added keys in this file, to avoid overriding of SAP Fiori application keys.

# This is the resource bundle for migrate test
#__ldi.translation.uuid=6b635390-a732-6e83-ca32-2430183951cf",
    "state": "modified",
  },
  "webapp/i18n/ObjectPage/SEPMRA_C_PD_Product/i18n.properties": Object {
    "contents": "#Make sure you provide a unique prefix to the newly added keys in this file, to avoid overriding of SAP Fiori application keys.

# This is the resource bundle for migrate test
#__ldi.translation.uuid=5646828c-ce8d-edb5-e36c-c7317be581e2",
    "state": "modified",
  },
  "webapp/i18n/i18n.properties": Object {
    "contents": "#Make sure you provide a unique prefix to the newly added keys in this file, to avoid overriding of SAP Fiori application keys.

# This is the resource bundle for migrate test
#__ldi.translation.uuid=0ebc351c-414c-dada-d429-c852998b8c80

#XTIT: Application name
migrate.test_sap.app.title=migrate test",
    "state": "modified",
  },
  "webapp/manifest.appdescr_variant": Object {
    "contents": "{
	\\"fileName\\": \\"manifest\\",
	\\"layer\\": \\"VENDOR\\",
	\\"fileType\\": \\"appdescr_variant\\",
	\\"reference\\": \\"sap.ui.demoapps.rta.fiorielements\\",
	\\"id\\": \\"migrate.test\\",
	\\"namespace\\": \\"apps/sap.ui.demoapps.rta.fiorielements/appVariants/migrate.test/\\",
	\\"version\\": \\"\${project.version}\\",
	\\"content\\": [
		{
			\\"changeType\\": \\"appdescr_app_setTitle\\",
			\\"content\\": {},
			\\"texts\\": {
				\\"i18n\\": \\"i18n/i18n.properties\\"
			}
		},
		{
			\\"changeType\\": \\"appdescr_ui5_addNewModelEnhanceWith\\",
			\\"content\\": {
				\\"modelId\\": \\"i18n|sap.suite.ui.generic.template.ListReport|SEPMRA_C_PD_Product\\"
			},
			\\"texts\\": {
				\\"i18n\\": \\"i18n/ListReport/SEPMRA_C_PD_Product/i18n.properties\\"
			}
		},
		{
			\\"changeType\\": \\"appdescr_ui5_addNewModelEnhanceWith\\",
			\\"content\\": {
				\\"modelId\\": \\"i18n|sap.suite.ui.generic.template.ObjectPage|SEPMRA_C_PD_Product\\"
			},
			\\"texts\\": {
				\\"i18n\\": \\"i18n/ObjectPage/SEPMRA_C_PD_Product/i18n.properties\\"
			}
		},
		{
			\\"changeType\\": \\"appdescr_fiori_setRegistrationIds\\",
			\\"content\\": {
				\\"registrationIds\\": [
					\\"F1647\\"
				]
			}
		},
		{
			\\"changeType\\": \\"appdescr_app_setAch\\",
			\\"content\\": {
				\\"ach\\": \\"CA-UI5-FL-RTA\\"
			}
		}
	]
}",
    "state": "modified",
  },
  "webapp/test/Adaptation_index.html": Object {
    "contents": "<!DOCTYPE HTML>

<html>

	<!-- IMPORTANT
			This HTML file is meant for testing the application/component standalone, outside the Unified Shell.
			Some integration functionality, personalization etc. will not be available when running standalone.
	-->

<head>

<meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
<meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
<meta charset=\\"UTF-8\\">

<script id=\\"sap-ui-script-placeholder\\"></script>

<!-- this is loaded to enable ushell services -->
<script src=\\"../../test-resources/sap/ushell/bootstrap/sandbox.js\\" id=\\"sap-ushell-bootstrap\\"></script>
<script id=\\"sap-ui-bootstrap\\"
		src=\\"./../resources/sap-ui-core.js\\"
		data-sap-ui-libs=\\"sap.m, sap.ushell, sap.me, sap.ui.table, sap.ui.layout, sap.ui.rta, sap.ui.dt, sap.viz, sap.ui.fl, sap.ui.comp, sap.suite.ui.generic.template\\"
		data-sap-ui-theme=\\"sap_belize\\"
		data-sap-ui-xx-bindingSyntax=\\"complex\\"
		data-sap-ui-compatVersion=\\"edge\\">
</script>
<!-- Change loading will be injected -->
<script>
    document.title = \\"migrate test\\";
	//Application launch configuration
	sap.ui.getCore().attachInitEvent(function() {
			var sVariantID = \\"migrate.test\\", sLayer = \\"VENDOR\\", oComponent, oComponentConfig, sComponentName = \\"sap.ui.demoapps.rta.fiorielements\\", oMergedManifest = window['manifest'];
		    if(window['manifest']){
				//if MergedDescriptor is available from app previre service
				console.log(\\"App variant running on merged manifest from backend.\\");
				appVariantPreview.mergedDescriptorAppPreview(oMergedManifest, sVariantID, sLayer).then(function(oShell){
					oShell.placeAt(\\"content\\");
				});
			}else{
				//fallback mechanism
				console.log(\\"Merged descriptor could not be fetched from backend, falling back to non-merged execution\\");
				appVariantPreview.fallbackAppVariantPreview(sComponentName, sVariantID, sLayer, window[\\"isInternal\\"]).then(function(oShell){
					oShell.placeAt(\\"content\\");
				});
			}
		});
</script>
</head>

<!-- UI Content -->
<body class=\\"sapUiBody\\" id=\\"content\\" role=\\"application\\">
</body>

</html>",
    "state": "modified",
  },
  "webapp/test/flpSandbox.html": Object {
    "contents": "<!DOCTYPE HTML>
<html>
<head>
	<meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
	<meta http-equiv=\\"Content-Type\\" content=\\"text/html;charset=UTF-8\\"/>
	<meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
	<title>migrate test</title>

	<!-- Bootstrap the unified shell in sandbox mode for standalone usage.

         The renderer is specified in the global Unified Shell configuration object \\"sap-ushell-config\\".

         The fiori2 renderer will render the shell header allowing, for instance,
         testing of additional application setting buttons.

         The navigation target resolution service is configured in a way that the empty URL hash is
         resolved to our own application.

         This example uses relative path references for the SAPUI5 resources and test-resources;
         it might be necessary to adapt them depending on the target runtime platform.
         The sandbox platform is restricted to development or demo use cases and must NOT be used
         for productive scenarios.
    -->
	<script type=\\"text/javascript\\">
		window[\\"sap-ushell-config\\"] = {
			defaultRenderer : \\"fiori2\\",
			renderers: {
				fiori2: {
					componentData: {
						config: {
							search: \\"hidden\\"
						}
					}
				}
			},
			applications: {
				\\"adaptationproject-display\\": {
					title: \\"migrate test\\",
					additionalInformation: \\"SAPUI5.Component=sap.ui.demoapps.rta.fiorielements\\",
					applicationType: \\"URL\\",
					url: \\"/webapp/parent\\"
				}
			}
		};
	</script>

	<script src=\\"../../test-resources/sap/ushell/bootstrap/sandbox.js\\" id=\\"sap-ushell-bootstrap\\"></script>

	<!-- Bootstrap the UI5 core library -->
	<script id=\\"sap-ui-bootstrap\\"
			src=\\"../../resources/sap-ui-core.js\\"
			data-sap-ui-libs=\\"sap.m, sap.ushell, sap.collaboration\\"
			data-sap-ui-theme=\\"sap_belize\\"
			data-sap-ui-compatVersion=\\"edge\\"
			data-sap-ui-resourceroots='{\\"sap.ui.demoapps.rta.fiorielements\\": \\"/webapp/parent\\"}'
			data-sap-ui-frameOptions='allow'> 	// NON-SECURE setting for testing environment
	</script>

	<script type=\\"text/javascript\\">
		sap.ui.getCore().attachInit(function() {
			// initialize the ushell sandbox component
			sap.ushell.Container.createRenderer().placeAt(\\"content\\");
		});
	</script>

</head>

<!-- UI Content -->
<body class=\\"sapUiBody\\" id=\\"content\\">
</body>
</html>",
    "state": "modified",
  },
}
`;
